<resources>
    <string name="mealennium_app_name" translatable="false">Mealennium</string>
    <string name="mealennium_facebook_app_id" translatable="false">812595745803373</string>
    <string name="mealennium_fb_login_protocol_scheme" translatable="false">fb812595745803373</string>

    Home
    <string name="mealennium_home_screen_sign_in_with_facebook_button_text">Sign in with facebook</string>
    <string name="mealennium_home_screen_sign_in_with_google_button_text">Sign in with Google</string>
    <string name="mealennium_home_screen_sign_in_with_email_and_password_button_text">Sign in with Email</string>
    <string name="mealennium_home_screen_dont_have_account_frame_sign_up_text_1">Don\'t have an account?</string>
    <string name="mealennium_home_screen_dont_have_account_frame_sign_up_text_2">Sign up</string>

    Sign-up Activity
    <string name="mealennium_sign_up_screen_name_edit_text_hint">Name</string>
    <string name="mealennium_sign_up_screen_email_edit_text_hint">Email</string>
    <string name="mealennium_sign_up_screen_password_edit_text_hint">Password</string>
    <string name="mealennium_sign_up_screen_confirm_password_edit_text_hint">Confirm Password</string>
    <string name="mealennium_sign_up_screen_sign_up_button_text">Sign Up</string>
    <string name="mealennium_sign_up_screen_back_button_text">Back</string>

    Sign-in Fragment
    <string name="mealennium_sign_in_screen_email_edit_text_hint">Email</string>
    <string name="mealennium_sign_in_screen_password_edit_text_hint">Password</string>
    <string name="mealennium_sign_in_screen_sign_up_button_text">Sign In</string>
    <string name="mealennium_sign_in_screen_back_button_text">Back</string>

    Add Post Activity
    <string name="mealennium_add_post_activity_post_title_edit_text_hint">Post Title</string>
    <string name="mealennium_add_post_activity_post_summery_edit_text_hint">Post Summery</string>
    <string name="mealennium_add_post_activity_post_description_edit_text_hint">Post Description</string>
    <string name="mealennium_add_post_activity_cancel_button_text">Cancel</string>
    <string name="mealennium_add_post_activity_create_button_text">Create</string>
    <string name="mealennium_add_post_activity_take_picture_button_text">Take Picture</string>
    <string name="mealennium_add_post_activity_pick_from_gallery_button_text">Choose From Gallery</string>
    <string name="mealennium_add_post_activity_top_centre_text">Create Post</string>

    Alert Dialogs
    <string name="mealennium_alert_user_authentication_failed_title">Authentication Failed</string>
    <string name="mealennium_alert_sign_out_title">Sign Out</string>
    <string name="mealennium_alert_exit_title">Exit</string>
    <string name="mealennium_alert_sign_out_message">Are you sure you want to sign out?</string>
    <string name="mealennium_alert_exit_message">Are you sure you want to exit?</string>
    <string name="mealennium_alert_user_authentication_canceled_title">Authentication Canceled</string>
    <string name="mealennium_alert_user_authentication_canceled_message">The authentication was canceled</string>
    <string name="mealennium_alert_field_validation_error_title">Validation Error</string>
    <string name="mealennium_alert_field_validation_error_message">Your password was not confirmed properly</string>
    <string name="mealennium_alert_yes_button_text">Yes</string>
    <string name="mealennium_alert_no_button_text">No</string>
    <string name="mealennium_alert_ok_button_text">OK</string>
    <string name="mealennium_alert_discard_post_title">Discard Post</string>
    <string name="mealennium_alert_discard_post_message">This operation will discard the current post\'s data</string>
    <string name="mealennium_alert_post_creation_failure_title">Post Creation Failed</string>

    Post List
    <string name="mealennium_post_list_screen_sign_out_button_text">Sign Out</string>
    <string name="mealennium_post_list_screen_top_action_bar_center_text">Share Your Experience</string>

    Post List Item
    <string name="mealennium_post_list_item_by_text">by:&#160;</string>

    Navigation Drawer
    <string name="mealennium_navigation_drawer_menu_home_option_text">Home</string>
    <string name="mealennium_navigation_drawer_menu_my_posts_option_text">My Posts</string>
    <string name="mealennium_navigation_drawer_menu_settings_option_text">Settings</string>
    <string name="mealennium_navigation_drawer_menu_sign_out_option_text">Sign Out</string>
    <string name="mealennium_navigation_drawer_menu_share_post_option_text">Share Post…</string>
    <string name="mealennium_navigation_drawer_menu_about_option_text">About</string>

    About Activity
    <string name="mealennium_about_screen_description_text">Meallennium allows customers, restaurants and bakeries\nto share new menus, dishes and experiences\n\n\n\n\nContact us in\nwww.meallennium.com/contact\nfor further questions</string>
    <string name="mealennium_about_screen_version_title_text">Version:&#160;</string>
    <string name="mealennium_about_screen_top_action_bar_center_text">About Meallennium</string>

    Post Details Activity
    <string name="mealennium_post_details_screen_created_by_text">Created By:&#160;</string>

    Top Action Bar
    <string name="mealennium_top_action_bar_search_edit_text_hint">Search a post…</string>
    <string name="mealennium_top_action_bar_center_text">Share Your Experience</string>
    <string name="mealennium_settings_activity_title">Settings</string>

    Settings Activity
    <string name="mealennium_settings_activity_account_option_text">Account</string>
    <string name="mealennium_settings_activity_theme_option_text">Theme</string>
    <string name="mealennium_settings_activity_about_option_text">About</string>

    <string name="mealennium_signature_title">Your signature</string>
    <string name="mealennium_reply_title">Default reply action</string>

    <string name="mealennium_theme_dark">Dark</string>
    <string name="mealennium_theme_light">Light</string>
</resources>